# technique-inference-engine

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_website.yml  python_test.yml
data/: combined_dataset.json  combined_dataset_full_frequency.json
data/data collection/: OpenCTI_graphQL_queries.ipynb  README  identify_missing_techniques.py
make/: python.mk
model/: __init__.py  factorization_recommender.py
models/: cli.py  constants.py  main.ipynb  main.py  matrix.py  matrix_builder.py  tie.py  utils.py
models/recommender/: __init__.py  bpr_recommender.py  factorization_recommender.py  implicit_bpr_recommender.py  implicit_wals_recommender.py  recommender.py  top_items_recommender.py  wals_recommender.py
notebooks/: main.ipynb
src/technique_inference_engine/: __init__.py
src/tie/: cli.py  constants.py  engine.py  exceptions.py  matrix.py  matrix_builder.py  utils.py
src/tie-web-interface/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.http.config.ts  vite.https.config.ts
src/tie-web-interface/build_tools/: download_attack.cjs  download_attack.js  download_sources.cjs  download_sources.js  update_enrichment_file.cjs  update_enrichment_file.js
src/tie-web-interface/public/: app.enrichment.json
src/tie-web-interface/src/: App.vue  main.ts
src/tie-web-interface/src/assets/configuration/: app.config.ts
src/tie-web-interface/src/assets/fonts/: trade_gothic.css
src/tie-web-interface/src/assets/styles/: engenuity_color_system.scss  engenuity_scaling_system.scss  main.scss
src/tie-web-interface/src/components/Containers/: ScrollBox.vue
src/tie-web-interface/src/components/Controls/: ButtonList.vue  ButtonMenu.vue  HelpTooltip.vue  MarkdownText.vue  NavigationFooter.vue  NavigationHeader.vue  NavigationHeaderTypes.ts  ShareButton.vue  TechniqueGroupSummary.vue  TechniqueItemSummary.vue  TechniqueSummary.vue  TechniquesViewController.vue
src/tie-web-interface/src/components/Elements/: PredictTechniquesTool.vue
src/tie-web-interface/src/router/: index.ts
src/tie-web-interface/src/stores/: InferenceEngineStore.ts
src/tie-web-interface/src/views/: AboutView.vue  HomeView.vue  ResourcesView.vue
src/tie/recommender/: __init__.py  bpr_recommender.py  factorization_recommender.py  implicit_bpr_recommender.py  implicit_wals_recommender.py  recommender.py  top_items_recommender.py  wals_recommender.py
tests/: test_init.py  test_utils.py
(+88 files in other folders)
